# legal-rag

./: .env.example  Dockerfile  README-Docker.md  README.md  README_SYSTEM_DESIGN.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
gradio_app/: .dockerignore  Dockerfile  README.md  api_client.py  app.py  components.py  requirements.txt
requirements/: base.txt  dev.txt
src/: celery_app.py  config.py  main.py
src/agents/: agents.py  schemas.py
src/assets/: prepare_eurlex.py
src/chromadb/: client.py  config.py
src/chunking/: README.md  base.py  recursive_overlap_chunker.py  router.py  schemas.py  semantic_chunker.py
src/data_preprocess_pipelines/: __init__.py  base.py  data_preprocess.py  data_preprocessrecursiveoverlap.py  simple_pdf_preprocess.py
src/distributed_task/: __init__.py  celery_app.py  ingestion_tasks.py  progress_tracker.py  schemas.py
src/embeddings/: base.py  e5_small.py  schemas.py
src/evaluation/: README.md  __init__.py  evaluator.py  metrics.py  models.py  question_generator_agent.py  schemas.py  service.py
src/ingestion/: base.py  json_ingestor.py  pdf_docling_ingestor.py  pdf_ingestor.py  schemas.py  utils.py
src/milvus/: client.py  config.py
src/mongodb/: client.py
src/posts/: router.py  schemas.py
src/propositioner/: base.py  constants.py  exceptions.py  schemas.py  t5_propositioner.py  utils.py
src/redis/: client.py
src/retrieval/: auto_merging_retriever.py  embedding_adapter.py  node_builder.py  schemas.py  simple_chromadb_retriever.py  simple_qdrant_retriever.py  storage_setup.py
(+20 files in other folders)
