[project]
name = "saga"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "commitizen>=4.9.1",
    "docling>=2.59.0",
    "fastapi>=0.120.2",
    "langchain-text-splitters>=1.0.0",
    "nltk>=3.9.2",
    "pip>=25.3",
    "pymilvus>=2.6.2",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.4",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.7",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
]
