[project]
name = "saga"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "commitizen>=4.9.1",
    "crewai>=1.2.1",
    "docling>=2.59.0",
    "fastapi>=0.120.2",
    "langchain>=1.0.3",
    "langchain-openai>=1.0.1",
    "langchain-text-splitters>=1.0.0",
    "llama-index>=0.14.6",
    "llama-index-vector-stores-chroma>=0.2.0",
    "nltk>=3.9.2",
    "openai>=1.109.1",
    "pip>=25.3",
    "chromadb>=0.5.0",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.4",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.7",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
    "redis>=7.0.1",
    "beanie>=2.0.0",
    "motor>=3.7.1",
    "celery[redis]>=5.3.1",
    "pytesseract>=0.3.13",
    "rapidocr>=3.4.2",
    "onnxruntime>=1.23.2",
    "easyocr>=1.7.2",
]
